# proto

./: .gitignore  .gitmodules  .protolint.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum  package-lock.json  package.json
.chglog/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/worflows/: release.yaml
.github/workflows/: changelog-tag.yaml  ci.yaml  clean-pseudo-version.yaml  publish-doc-registry.yaml  publish-documentation.yaml  publish-ghpages.yaml  publish-vercel.yaml  release.yaml  reviewdog.yaml
docs/: README.md
example/api/v1/: index.html  openapi.yaml
greenspace/api/v1/: index.html
iam-roots/api/v1/: index.html  openapi.yaml
proto/api/v1/: mobile.proto
proto/dot-auth/api/v1/: design-doc.md  error.proto
proto/example/api/v1/: README.md  ping.proto
proto/greenspace/api/v1/: README.md  mobile.proto
scripts/: markdown.tmpl
scripts/api-registry/: astro.config.mjs  bun.lockb  package-lock.json  package.json  tailwind.config.mjs
scripts/api-registry/src/: tailwind.css
scripts/doc-registry/: README.md  astro.config.mjs  bun.lockb  package.json  tailwind.config.mjs
scripts/doc-registry/src/: env.d.ts  tailwind.css
scripts/go/: README.md  go.mod
scripts/javascript/: INSTALL.md  package.json
scripts/nodejs/: .npmignore  .npmrc  README.md  package-lock.json  package.json
scripts/rust/: Cargo.toml  README.md
scripts/typescript/: INSTALL.md  package-lock.json  package.json
scripts/typescript/examples/: client.ts  package-lock.json  package.json  tsconfig.json
(+92 files in other folders)
