[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
tonic = "0.10.2"
tonic-types = "0.10.2"

[build-dependencies]
prost-build = "0.12.3"
tonic-build = "0.10.2"
walkdir = "2.4.0"
